adjust main.html

--- a/templates/main.html
+++ b/templates/main.html
@@ -350,9 +350,9 @@
                     <option value="AR">AR</option>
                     <option value="HWES">HWES</option>  
                     <option value="ARIMA">ARIMA</option>   
-                    <option value="SARIMA">ARCH</option>
-                    <option value="ARCH">UCM</option> 
-                    <option value="UCM">SARIMA</option> 
+                    <option value="SARIMA">SARIMA</option>
+                    <option value="ARCH">ARCH</option> 
+                    <option value="UCM">UCM</option> 
                     <option value="AI">AI</option> 
                 </select>
                 <select id="data_length">
