update gitginore and minor adjustments

--- a/templates/main.html
+++ b/templates/main.html
@@ -595,7 +595,7 @@
                 'ARCH': 'Autoregressive Conditional Heteroskedasticity',
                 'UCM': 'Unobserved Components Model',
                 'SARIMA': 'Seasonal Autoregressive Integrated Moving Average',
-                'AI': 'Artificial Intelligence'
+                'AI': 'Generative Pre-trained Transformer'
             };
             return modelNames[modelType] || modelType; // Default to the model type if no match is found
         }
